# biometric_test_pizza_project

./: .gitignore  .local_env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test-docker-compose.yml
.github/workflows/: main.yml  pytest.yml  update-coverage-on-readme.yml
app/: enums.py  models.py  validator.py
app/schemas/: __init__.py  pizza_schema.py  restaurant_schema.py
app/tests/: restaurant_test.py
app/views/: __init__.py  pizza_view.py  restaurant_view.py
migrations/: env.py
modules/dal/: __init__.py  dal.py  dependencies.py
modules/pagination/: __init__.py  pagination.py
settings/configs/: __init__.py  database_config.py
settings/database/: __init__.py  base.py  connection.py  mixin.py
tests/: conftest.py  test_pizza.py  test_restaurant.py
tests/data/: pizza.json  restaurant.json
