[tool.poetry]
name = "biometric_test_pizza_project"
version = "0.1.0"
description = ""
authors = ["Tamerlan <dzhurunovt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.78.0"
uvicorn = "0.18.1"
gunicorn = "20.1.0"
fastapi-pagination = "0.9.3"
SQLAlchemy = "1.4.40"
asyncpg = "0.25.0"
alembic = "1.8.0"
pydantic = {version = "1.9.1", extras = ["email"]}
python-dotenv = "0.20.0"
asgi-lifespan = "1.0.1"
requests = "2.28.0"
httpx = "0.23.0"
pytest = "7.1.2"
pytest-asyncio = "0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
